--- a/requirements.txt
+++ b/requirements.txt
@@ -1,222 +1,13 @@
-absl-py @ file:///croot/absl-py_1714140470852/work
-aiohappyeyeballs @ file:///croot/aiohappyeyeballs_1725434011349/work
-aiohttp @ file:///croot/aiohttp_1725527756643/work
-aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
-anyio @ file:///croot/anyio_1706220167567/work
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///tmp/build/80754af9/argon2-cffi-bindings_1644569684262/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-async-lru @ file:///croot/async-lru_1699554519285/work
-async-timeout @ file:///croot/async-timeout_1703096998144/work
-attrs @ file:///croot/attrs_1729089401488/work
-Babel @ file:///croot/babel_1671781930836/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///croot/beautifulsoup4-split_1718029820055/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-Bottleneck @ file:///croot/bottleneck_1707864210935/work
-Brotli @ file:///croot/brotli-split_1714483155106/work
-cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
-certifi @ file:///croot/certifi_1725551672989/work/certifi
-cffi @ file:///croot/cffi_1726856441404/work
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-clarabel @ file:///home/conda/feedstock_root/build_artifacts/clarabel_1709397138704/work
-click @ file:///croot/click_1698129812380/work
-cloudpickle @ file:///croot/cloudpickle_1721657346512/work
-comm @ file:///croot/comm_1709322850197/work
-contourpy @ file:///opt/conda/conda-bld/contourpy_1663827406301/work
-cvxpy @ file:///home/conda/feedstock_root/build_artifacts/cvxpy-split_1724065174975/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-cytoolz @ file:///croot/cytoolz_1701723583781/work
-darkdetect @ file:///home/conda/feedstock_root/build_artifacts/darkdetect_1671234766368/work
-dask @ file:///croot/dask-core_1683065217061/work
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-deepdiff @ file:///croot/deepdiff_1720453707427/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-Deprecated @ file:///opt/conda/conda-bld/deprecated_1659726428456/work
-dipy @ file:///home/conda/feedstock_root/build_artifacts/dipy_1707408592350/work
-ecos @ file:///croot/ecos_1677702164573/work
-EDFlib-Python @ file:///home/conda/feedstock_root/build_artifacts/edflib-python_1694696534592/work
-eeglabio @ file:///home/conda/feedstock_root/build_artifacts/eeglabio_1687839374565/work
-exceptiongroup @ file:///croot/exceptiongroup_1706031385326/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///opt/conda/conda-bld/python-fastjsonschema_1661371079312/work
-filelock @ file:///croot/filelock_1700591183607/work
-fonttools @ file:///croot/fonttools_1713551344105/work
-frozenlist @ file:///croot/frozenlist_1698702560391/work
-fsspec @ file:///croot/fsspec_1724855583730/work
-future @ file:///croot/future_1677599870788/work
-gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645455532332/work
-grpcio @ file:///croot/grpc-split_1716834572340/work
-h11 @ file:///croot/h11_1706652277403/work
-h5io @ file:///home/conda/feedstock_root/build_artifacts/h5io_1721160476382/work
-h5py @ file:///home/conda/feedstock_root/build_artifacts/h5py_1674498848180/work
-httpcore @ file:///croot/httpcore_1706728464539/work
-httpx @ file:///croot/httpx_1723474802858/work
-idna @ file:///croot/idna_1714398848350/work
-imageio @ file:///croot/imageio_1707247282708/work
-imageio-ffmpeg @ file:///home/conda/feedstock_root/build_artifacts/imageio-ffmpeg_1717461632069/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
-importlib_resources @ file:///croot/importlib_resources-suite_1720641103994/work
-ipykernel @ file:///croot/ipykernel_1728665589812/work
-ipython @ file:///croot/ipython_1691532092695/work
-ipywidgets @ file:///croot/ipywidgets_1709574692113/work
-jedi @ file:///croot/jedi_1721058342488/work
-Jinja2 @ file:///croot/jinja2_1716993405101/work
-joblib @ file:///croot/joblib_1718217211762/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///croot/jsonschema_1728486696720/work
-jsonschema-specifications @ file:///croot/jsonschema-specifications_1699032386549/work
-jupyter @ file:///croot/jupyter_1707947101020/work
-jupyter-console @ file:///croot/jupyter_console_1679999630278/work
-jupyter-events @ file:///croot/jupyter_events_1718738097486/work
-jupyter-lsp @ file:///croot/jupyter-lsp-meta_1699978238815/work
-jupyter_client @ file:///croot/jupyter_client_1699455897726/work
-jupyter_core @ file:///croot/jupyter_core_1718818295206/work
-jupyter_server @ file:///croot/jupyter_server_1718827083372/work
-jupyter_server_terminals @ file:///croot/jupyter_server_terminals_1686870725608/work
-jupyterlab @ file:///croot/jupyterlab_1725895214311/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///croot/jupyterlab_widgets_1709322880313/work
-jupyterlab_server @ file:///croot/jupyterlab_server_1725865349919/work
-kiwisolver @ file:///croot/kiwisolver_1672387140495/work
-lazy_loader @ file:///croot/lazy_loader_1718176737906/work
-llvmlite @ file:///croot/llvmlite_1697031035361/work
-locket @ file:///opt/conda/conda-bld/locket_1652903118915/work
-loguru @ file:///croot/loguru_1729800300339/work
-lxml @ file:///croot/lxml_1722882187815/work
-Markdown @ file:///croot/markdown_1671541909495/work
-MarkupSafe @ file:///croot/markupsafe_1704205993651/work
-matplotlib @ file:///croot/matplotlib-suite_1693812469450/work
-matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
-mffpy @ file:///home/conda/feedstock_root/build_artifacts/mffpy_1727395097168/work
-mistune @ file:///opt/conda/conda-bld/mistune_1661496219659/work
-mkl-fft @ file:///croot/mkl_fft_1695058164594/work
-mkl-random @ file:///croot/mkl_random_1695059800811/work
-mkl-service==2.4.0
-mne @ file:///D:/bld/mne-python_1705433743732/work
-mne-qt-browser @ file:///home/conda/feedstock_root/build_artifacts/mne-qt-browser_1718056629840/work
-more-itertools @ file:///croot/more-itertools_1727185441804/work
-mpmath @ file:///croot/mpmath_1690848262763/work
-msgpack @ file:///opt/conda/conda-bld/msgpack-python_1652362659880/work
-multidict @ file:///croot/multidict_1701096859099/work
-narwhals==1.41.0
-nbclient @ file:///croot/nbclient_1698934205032/work
-nbconvert @ file:///croot/nbconvert_1728049414448/work
-nbformat @ file:///croot/nbformat_1728049424075/work
-nest-asyncio @ file:///croot/nest-asyncio_1708532673751/work
-networkx @ file:///croot/networkx_1690561992265/work
-nibabel @ file:///home/conda/feedstock_root/build_artifacts/nibabel_1709044711835/work
-nilearn @ file:///home/conda/feedstock_root/build_artifacts/nilearn_1712668547202/work
-notebook @ file:///croot/notebook_1727197365392/work
-notebook_shim @ file:///croot/notebook-shim_1699455894279/work
-numba @ file:///croot/numba_1701362346798/work
-numexpr @ file:///croot/numexpr_1683221822650/work
-numpy @ file:///work/mkl/numpy_and_numpy_base_1682953417311/work
-ordered-set @ file:///croot/ordered-set_1685114664206/work
-orjson @ file:///croot/orjson_1728486951572/work/target/wheels/orjson-3.10.7-cp38-cp38-linux_x86_64.whl#sha256=2381503c6161deef0aba0a7e85086e0fb19e576ca81c9a13112b7cfb2a14380c
-osqp @ file:///croot/osqp_1687877015289/work
-overrides @ file:///croot/overrides_1699371140756/work
-packaging @ file:///croot/packaging_1720101850331/work
-pandas @ file:///croot/pandas_1692289311655/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-partd @ file:///croot/partd_1698702562572/work
-patsy @ file:///croot/patsy_1718378176128/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-pillow @ file:///croot/pillow_1721059439630/work
-pkgutil_resolve_name @ file:///croot/pkgutil-resolve-name_1704297459416/work
-platformdirs @ file:///croot/platformdirs_1692205439124/work
-plotly==6.1.2
-ply==3.11
-pooch @ file:///croot/pooch_1695850093751/work
-prometheus-client @ file:///tmp/abs_d3zeliano1/croots/recipe/prometheus_client_1659455100375/work
-prompt-toolkit @ file:///croot/prompt-toolkit_1704404351921/work
-protobuf==4.25.3
-psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///croot/pygments_1684279966437/work
-pymatreader @ file:///home/conda/feedstock_root/build_artifacts/pymatreader_1687792116204/work
-pynndescent==0.5.13
-PyOpenGL==3.1.1a1
-pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
-PyQt5==5.15.10
-PyQt5-sip @ file:///croot/pyqt-split_1698769088074/work/pyqt_sip
-pyqtgraph @ file:///croot/pyqtgraph_1673550036766/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
-python-dateutil @ file:///croot/python-dateutil_1716495738603/work
-python-json-logger @ file:///croot/python-json-logger_1683823803357/work
-python-picard @ file:///home/conda/feedstock_root/build_artifacts/python-picard_1731951931804/work
-pytz @ file:///croot/pytz_1713974312559/work
-pyvista @ file:///home/conda/feedstock_root/build_artifacts/pyvista_1732683849389/work
-pyvistaqt @ file:///home/conda/feedstock_root/build_artifacts/pyvistaqt_1718780284784/work
-PyWavelets @ file:///croot/pywavelets_1670425177960/work
-PyYAML @ file:///croot/pyyaml_1728657952215/work
-pyzmq @ file:///croot/pyzmq_1705605076900/work
-QDarkStyle @ file:///croot/qdarkstyle_1709231003551/work
-qdldl @ file:///croot/qdldl-python_1712339412728/work
-qtconsole @ file:///croot/qtconsole_1726836502164/work
-QtPy @ file:///croot/qtpy_1700144840038/work
-referencing @ file:///croot/referencing_1699012038513/work
-requests @ file:///croot/requests_1721410876868/work
-rfc3339-validator @ file:///croot/rfc3339-validator_1683077044675/work
-rfc3986-validator @ file:///croot/rfc3986-validator_1683058983515/work
-rpds-py @ file:///croot/rpds-py_1698945930462/work
-scikit-image @ file:///croot/scikit-image_1669241743693/work
-scikit-learn @ file:///croot/scikit-learn_1694788527225/work
-scipy==1.10.1
-scooby @ file:///home/conda/feedstock_root/build_artifacts/scooby_1714897440316/work
-scs @ file:///croot/scs_1693496893846/work
-seaborn @ file:///croot/seaborn_1718302919398/work
-Send2Trash @ file:///croot/send2trash_1699371139552/work
-setuptools-scm @ file:///croot/setuptools_scm-split_1720687746379/work
-shap==0.44.1
-sip @ file:///croot/sip_1698675935381/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-slicer==0.0.7
-sniffio @ file:///croot/sniffio_1705431295498/work
-soupsieve @ file:///croot/soupsieve_1696347547217/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-statsmodels @ file:///croot/statsmodels_1689937266057/work
-sympy @ file:///croot/sympy_1734622612703/work
-tables @ file:///home/conda/feedstock_root/build_artifacts/pytables_1666850027944/work
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1723713090305/work/tensorboard-2.17.1-py3-none-any.whl#sha256=253701a224000eeca01eee6f7e978aea7b408f60b91eb0babdb04e78947b773e
-tensorboard_data_server @ file:///croot/tensorboard-data-server_1724172556187/work/tensorboard_data_server-0.7.0-py3-none-manylinux2014_x86_64.whl#sha256=7da966c3e116be7b4d44cd25a804e06f45fa6d4a1f03819052dd9cb3482b141a
-tensorboardX @ file:///home/conda/feedstock_root/build_artifacts/tensorboardx_1692548726750/work
-terminado @ file:///croot/terminado_1671751832461/work
-threadpoolctl @ file:///croot/threadpoolctl_1719407800858/work
-tifffile==2020.10.1
-tinycss2 @ file:///croot/tinycss2_1668168815555/work
-tomli @ file:///opt/conda/conda-bld/tomli_1657175507142/work
-toolz @ file:///croot/toolz_1667464077321/work
+python==3.8.18
+numpy==1.24.3
+pandas==2.0.3
+nibabel==5.2.1
+nilearn==0.10.4
+mne==1.6.1
 torch==2.4.1
-tornado @ file:///croot/tornado_1718740109488/work
-tqdm @ file:///croot/tqdm_1724853939799/work
-traitlets @ file:///croot/traitlets_1718227057033/work
-trame @ file:///home/conda/feedstock_root/build_artifacts/trame_1733609183706/work
-trame-client @ file:///home/conda/feedstock_root/build_artifacts/trame-client_1732029106585/work
-trame-server @ file:///home/conda/feedstock_root/build_artifacts/trame-server_1732669527458/work
-trame-vtk @ file:///home/conda/feedstock_root/build_artifacts/trame-vtk_1731132270695/work
-trame-vuetify @ file:///home/conda/feedstock_root/build_artifacts/trame-vuetify_1725400027858/work
-triton==3.0.0
-trx-python @ file:///home/conda/feedstock_root/build_artifacts/trx-python_1719123877917/work
-typing_extensions @ file:///croot/typing_extensions_1715268824938/work
-tzdata @ file:///croot/python-tzdata_1746123641790/work
+tensorboard==2.17.1
+tensorboardx==2.6.2.2
+shap==0.44.1
 umap-learn==0.5.7
-unicodedata2 @ file:///croot/unicodedata2_1713212950228/work
-urllib3 @ file:///croot/urllib3_1727769808118/work
-vtk==9.2.6
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client @ file:///croot/websocket-client_1715878298792/work
-Werkzeug @ file:///croot/werkzeug_1716533313107/work
-widgetsnbextension @ file:///croot/widgetsnbextension_1709322880396/work
-wrapt @ file:///tmp/abs_c335821b-6e43-4504-9816-b1a52d3d3e1eel6uae8l/croots/recipe/wrapt_1657814400492/work
-wslink @ file:///home/conda/feedstock_root/build_artifacts/wslink_1726544007929/work
-xlrd @ file:///croot/xlrd_1685030938141/work
-xmltodict @ file:///croot/xmltodict_1697086210950/work
-yarl @ file:///croot/yarl_1725976495189/work
-zipp @ file:///croot/zipp_1729012354496/work
+plotly==6.1.2
+matplotlib==3.7.2
